Changes since 0.1.15:

* Allow sub-sites (example.com#~bob fetches the index
  http://example.com/~bob/.0inst-index.tgz).
  (XXX: can't create GPG key!)

* The helper now runs as a daemon, with output going to syslog.

* 0refresh and other programs now use DBUS to communicate with zero-install.

Changes since 0.1.14:

* Removed unused expat include (spotted by Stuart Langridge).

* The MD5 checksum for downloaded archives is now checked.

* Lots of fixed-sized buffers were converted to dynamically-sized ones.

* GPG signatures are verified when updating a site index (needs auditing).

* override.xml file can be used to add symlinks to the filesystem.
  (the 0divert program uses this)

Changes since 0.1.13:

* 0refresh can be given a path and a date (like 0run), and only does
  the refresh if the path isn't recent enough.

* Fixed bug in 0run where the executable was a directory.

* Removed 0show. It wasn't much use, and ZeroProgress replaces it.

* Added missing test_cases.py file to distribution.

* Mount the /uri/0install filesystem automatically at install time.

* Made zero-install slightly more verbose by default.

* Warn about processing an index file if the path attribute is wrong.


Changes since 0.1.12:

* Support compiling with older Linux 2.4.18 kernels (Joachim Kupke).

* New /bin/0run program to be used in scripts, eg:
	#!/bin/0run example.com/myprog 2003-01-01

* 0refresh can be given a hostname argument to use instead of using `pwd`.

* New --verbose option for zero-install.

* Fix crash when fetching a top-level file.

* Fixed dentry leaks in lazyfs.

* Lazyfs now notices updates to directories without needing them to be
  explicitly opened.

* When a directory has changed size or mtime, don't create a new inode.

* Lots more test cases to check each of the fixed bugs.


Changes since 0.1.11:

* The index is now fetches as '.0inst-index.tgz' rathen than as '.xml'.
  This is faster (since it's compressed) and will allow us to send the