@@ -29,15 +29,12 @@ install-exec-local:
 	[ -n "${ROOT_PREFIX}" ] || make install-real
 
 install-real:
-	[ ! -L /uri/.lazyfs-cache ] || umount /uri
 	[ -d /uri ] || mkdir /uri
 	[ -d /uri/0install ] || mkdir /uri/0install
-	[ ! -d /uri/0http -o -L /uri/0http ] || rmdir /uri/0http
-	[ -L /uri/0http ] || ln -s 0install /uri/0http
-	[ -L /uri/http ] || ln -s 0install /uri/http
+	rm -f /uri/0http /uri/http
 	[ -d /var/cache/zero-inst ] || mkdir -m 0755 /var/cache/zero-inst
 	chown "${HELPER_USER}" /var/cache/zero-inst
-	echo "lazyfs	/uri/0install	lazyfs	/var/cache/zero-inst	0 0" >> ${FSTAB}
+	echo "lazyfs	/uri/0install	lazyfs-@VERSION@	/var/cache/zero-inst	0 0" >> ${FSTAB}
 	echo "Mounting Zero Install filesystem"
 	[ ! -L /uri/0install/.lazyfs-cache ] || (echo "Already mounted!"; exit 1)
 	mount /uri/0install
